--- a/appuser/templates/user/account_summary.html
+++ b/appuser/templates/user/account_summary.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="mt-3">
-        <a href="{% url 'profile' %}" class="btn btn-outline-secondary">
+        <a href="{% url 'user:profile' %}" class="btn btn-outline-secondary">
             ← Profili Gör
         </a>
     </div>
