--- a/appuser/templates/user/base.html
+++ b/appuser/templates/user/base.html
@@ -229,7 +229,7 @@
                     {% endif %}
                 </div>
             </div> 
-            <a href="{% url 'logout_confirm' %}" class="nav_link"> <i class='bi bi-box-arrow-right nav_icon'></i> <span class="nav_name">Çıkış</span> </a>
+            <a href="{% url 'user:logout_confirm' %}" class="nav_link"> <i class='bi bi-box-arrow-right nav_icon'></i> <span class="nav_name">Çıkış</span> </a>
         </nav>
     </div>
 
