--- a/appuser/templates/user/password_reset_confirm.html
+++ b/appuser/templates/user/password_reset_confirm.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="mt-3">
-        <a href="{% url 'profile' %}" class="btn btn-outline-secondary">
+        <a href="{% url 'user:profile' %}" class="btn btn-outline-secondary">
             ← Profili Gör
         </a>    
     </div>
