--- a/need/templates/need/offer.html
+++ b/need/templates/need/offer.html
@@ -25,8 +25,8 @@
                     <form method="post">
                         {% csrf_token %}
                         <div class="mb-3">
-                            <label for="{{ form.donor_first_name.id_for_label }}" class="form-label">{{
-                                form.donor_first_name.label }}</label>
+                            <label for="{{ form.donor_first_name.id_for_label }}" class="form-label">
+                                {{  form.donor_first_name.label }} </label>
                             {{ form.donor_first_name }}
                             {% if form.donor_first_name.errors %}
                             <div class="text-danger">{{ form.donor_first_name.errors }}</div>
@@ -34,8 +34,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="{{ form.donor_last_name.id_for_label }}" class="form-label">{{
-                                form.donor_last_name.label }}</label>
+                            <label for="{{ form.donor_last_name.id_for_label }}" class="form-label"> {{ form.donor_last_name.label }} </label>
                             {{ form.donor_last_name }}
                             {% if form.donor_last_name.errors %}
                             <div class="text-danger">{{ form.donor_last_name.errors }}</div>
