--- a/need/templates/need/base.html
+++ b/need/templates/need/base.html
@@ -227,6 +227,11 @@
                     {% if 'user_delete' in user_permissions or 'user_information' in user_permissions %}
                         <a href="/user/users/" class="nav_link"> <i class="bi nav_icon bi-people-fill text-danger" ></i> <span class="nav_name text-danger">Kullanıcılar</span> </a>
                     {% endif %}
+                    {% if 'offer_update' in user_permissions or 'user_information' in user_permissions %}
+                        <a href="/courier/requests/" class="nav_link"> <i class="bi bi-bus-front text-danger "></i><span class="nav_name text-danger">Kullanıcılar</span> </a>
+                    {% endif %}
+
+                    
                 </div>
             </div> 
             <a href="{% url 'user:logout_confirm' %}" class="nav_link"> <i class='bi bi-box-arrow-right nav_icon'></i> <span class="nav_name">Çıkış</span> </a>
